<!--
  ~ Copyright (c) 2019 duchampdev.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
            android:key="@string/pref_key_categoryorder"
            android:title="@string/settings_catorder_title"
            android:summaryOn="@string/settings_catorder_summary_on"
            android:summaryOff="@string/settings_catorder_summary_off"
            android:defaultValue="false" />

    <SwitchPreference
        android:key="@string/pref_key_statsrange"
        android:title="@string/settings_statsrange_title"
        android:summaryOn="@string/settings_statsrange_summary_on"
        android:summaryOff="@string/settings_statsrange_summary_off"
        android:defaultValue="true" />

    <ListPreference
        android:key="@string/pref_key_nightmode"
        android:title="@string/settings_nightmode_title"
        android:entries="@array/settings_nightmode_entries"
        android:entryValues="@array/settings_nightmode_entry_vals"
        android:defaultValue="auto"/>

</PreferenceScreen>
